fix error sonar